@@ -3,6 +3,7 @@ Changes for 2.2.19rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-12349] fixed security vulnerability with execution of the remote commands on server; thanks to MATSUDA Daiki for report (vso)
 ...G...... [ZBX-12231] fixed memory leak in agent if log[], logrt[] items use global regexps with multiple subexpressions (Andris)
 ...G...... [ZBX-12187] fixed memory leak when using UserParameter with suppressed characters passed in arguments (viktors)
 A......... [ZBX-12023] fixed permission issue with event.get method (Sasha)
